# docker-pia-wireguard

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: push-image.yml
src/: config.rs  main.rs
